# little-bobby-diff-tool

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: build.yml  release.yml
db/: docker-compose.yml
src/: main.rs
src/cli/: args.rs  mod.rs
src/compare/: mod.rs  report.rs
src/db/: column.rs  column_privilege.rs  index.rs  mod.rs  privilege.rs  routine.rs  routine_parameters.rs  routine_privilege.rs  schema.rs  sequence.rs  table.rs  table_constraint.rs  table_privilege.rs  table_trigger.rs  thing.rs  view.rs
src/string/: mod.rs
tests/: README.md  run  run-all
tests/column-added/: expected.txt  right.sql
tests/column-changed/: expected.txt  left.sql
tests/column-ordering-changed/: expected.txt  right.sql
tests/column-ordering-changed-ignored/: args
tests/column-ordinal-changes-ignored/: args  left.sql  right.sql
tests/column-privilege-added/: expected.txt  left.sql  right.sql
tests/column-privilege-added-ignored/: right.sql
tests/column-privilege-removed/: expected.txt  left.sql  right.sql
tests/column-removed/: expected.txt
tests/identical-schemas/: left.sql
tests/identical-schemas-verbose/: expected.txt  right.sql
tests/main/: expected.txt  left.sql  right.sql
tests/privilege-changes-ignored/: left.sql  right.sql
tests/routine-added/: expected.txt
tests/routine-added-unnamed-parameters/: expected.txt  right.sql
tests/routine-changed/: expected.txt  left.sql  right.sql
tests/routine-privilege-added/: expected.txt  left.sql  right.sql
tests/routine-privilege-added-ignored/: args  left.sql  right.sql
(+78 files in other folders)
