[package]
name = "lbdt"
version = "0.0.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.20", features = ["derive"] }
colored = "=2.1.0"
itertools = "=0.13.0"
sqlformat = "=0.2.6"
sqlx = {  version = "=0.8.2", features = ["runtime-tokio", "postgres", "macros"] }
tokio = { version = "=1.40.0", features = ["rt", "rt-multi-thread", "macros", "signal"] }
futures-core = "=0.3.31"
futures = "=0.3.31"